[package]
name = "rs-drive"
description = "Dash drive built on top of GroveDB"
version = "0.23.0-dev.5"
edition = "2021"
license = "MIT"
private = true

[dependencies]
serde = { version = "1.0.132", features = ["derive"] }
ciborium = "0.2.0"
bs58 = "0.4.0"
base64 = "0.13.0"
rand = "0.8.4"
byteorder = "1.4.3"
indexmap = "1.8.0"
hex = "0.4.3"
array_tool = "1.0.3"
rand_distr = "0.4.3"
tempfile = "3"
serde_json = "1.0.73"
sqlparser = "0.13.0"
enum-map = "2.0.3"
thiserror = "1.0.30"
moka = "0.8.1"
nohash-hasher = "0.2.0"
chrono = "0.4.0"
rust_decimal = "1.2.5"
rust_decimal_macros = "1.25"

[dependencies.grovedb]
git = "https://github.com/dashevo/grovedb"
rev = "3e62a80d133f1253d15478afe13093a0a11d9176"

[dependencies.storage]
git = "https://github.com/dashevo/grovedb"
rev = "3e62a80d133f1253d15478afe13093a0a11d9176"
