[package]
name = "node"
version = "0.23.0-dev.5"
description = "GroveDB node.js bindings"
edition = "2021"
license = "MIT"
private = true

[lib]
crate-type = ["cdylib"]

[dependencies]
rs-drive = { path = "../drive" }

[dependencies.grovedb]
git = "https://github.com/dashevo/grovedb"
rev = "3e62a80d133f1253d15478afe13093a0a11d9176"

[dependencies.neon]
version = "0.10.1"
default-features = false
features = ["napi-6", "event-queue-api", "try-catch-api"]
